Renamed project in Eclipse project and package.json

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>node.js-dmpster-uploader</name>
+	<name>node-dmpster-uploader</name>
 	<comment></comment>
 	<projects>
 	</projects>
