Use a better more error tolerant algorithm to search for .dmp files. Removed package "node-dir"

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "upload-to-dmpster.js",
   "dependencies": {
     "form-data": "~0.1.2",
-    "minimist": "0.0.5",
-    "node-dir": "~0.1.5"
+    "minimist": "0.0.5"
   },
   "devDependencies": {},
   "scripts": {
