--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "form-data": "~0.1.2",
     "minimist": "0.0.5",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "ejs": "~0.8.5"
   },
   "devDependencies": {},
   "scripts": {
